k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chunks
  labels:
    app.kubernetes.io/name: chunks
